--- a/npcs/ahshani_dondarion.yaml
+++ b/npcs/ahshani_dondarion.yaml
@@ -389,7 +389,9 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "You bring honor to your house", "It is as my master would have approved"
+    expressions:  
+    - "You bring honor to your house"
+    - "It is as my master would have approved"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -438,7 +440,8 @@ npc:
     # Required.
     # ???Maximum length???
     #
-    secrets: That he way away with his lover when his house and master were murdered
+    secrets: |
+      That he way away with his lover when his house and master were murdered
        
       
   #
@@ -465,18 +468,18 @@ npc:
   #
   specialties:
     skills:
-   - - Dragonborn Abilities:
-       - Breathe Weapon: Can exhale fire in a 15 foot cone with a DC 13. A creature takes 2d6 damage on a failed save, and half as much damage on a successful one.           
-       - Damage Resistance: Resistance to Fire     
+    - Dragonborn Abilities:
+      - Breathe Weapon: Can exhale fire in a 15 foot cone with a DC 13. A creature takes 2d6 damage on a failed save, and half as much damage on a successful one.           
+        Damage Resistance: Resistance to Fire     
     
-   - - Fighter Abilities:
+      Fighter Abilities:
        - Fighting Style: Dueling
-       - Second Wind: Bonus Action to regain 1d10 + 5
-       - Action Surge: Once every short/long rest can take an extra action
-       - Extra Attack: Can attack twice each turn
+         Second Wind: Bonus Action to regain 1d10 + 5
+         Action Surge: Once every short/long rest can take an extra action
+         Extra Attack: Can attack twice each turn
  
-   - - Samurai Abilities:
-       - Fighting Spirit: As a bonus action on his turn, he can give himself advantage on all weapon attack rolls until the end of the current turn. When he does so, he also gains 5 temporary hit points.    
+      Samurai Abilities:
+      - Fighting Spirit: As a bonus action on his turn, he can give himself advantage on all weapon attack rolls until the end of the current turn. When he does so, he also gains 5 temporary hit points.    
 
     special-abilities:
     - Proficiencies: Investigation, Persuasion, History, Religion, Insight    
@@ -486,9 +489,9 @@ npc:
     combat-tactics: |
       He meets his opponents head on and will do his best to turn every fight into a one on one duel rather than getting mobbed
     special-equipment:
-          - His master's Phantom Katana - Three charges renewed at dawn; 1 charge - cast Phantasmal Force on strike and the target sees Ahshani as the most horrifying creature they can imagine and the target sees 
-            him/her self surrounded by other horrifying creatures.
-          - +2 Full Plate Armor
+    - His master's Phantom Katana - Three charges renewed at dawn; 1 charge - cast Phantasmal Force on strike and the target sees Ahshani as the most horrifying creature they can imagine and the target sees 
+      him/her self surrounded by other horrifying creatures.
+    - +2 Full Plate Armor
                                                                    
   profile:
 
@@ -516,32 +519,3 @@ npc:
     #
     personality: |
       Ahshani is a tall and broad, gold-scaled dragon born, He wears full golden plate armor and helmet and always carries his katana. 
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
