--- a/npcs/amera.yaml
+++ b/npcs/amera.yaml
@@ -298,7 +298,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -314,7 +313,6 @@ npc:
     - Common
     - Primordial
     - Aquan
-
 
     #
     # Factions:
@@ -337,7 +335,6 @@ npc:
     - id: ships_crew
       name: Ship's Crew
       role: Sailor, Courtisan
-
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -389,7 +386,9 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Aren't you the handsome one", "The captain doesn't like me to fraternize with the passengers. it causes problems"
+    expressions:  
+    - "Aren't you the handsome one"
+    - "The captain doesn't like me to fraternize with the passengers. it causes problems"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -465,47 +464,46 @@ npc:
   #
   specialties:
     skills:
-   - - Siren Abilities:
-       - Darkvision: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray..           
-       - Amphibious: You can breathe both air and water 
-       - Sirens Body: As a bonus action, they turn into an amphibious form, their legs becoming a single powerful tail. Their walking speed is reduced to 5 feet and they gain a swimming speed of 40 feet. While in this form, 
+    - Siren Abilities:
+      - Darkvision: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray..
+        Amphibious: You can breathe both air and water 
+        Sirens Body: As a bonus action, they turn into an amphibious form, their legs becoming a single powerful tail. Their walking speed is reduced to 5 feet and they gain a swimming speed of 40 feet. While in this form, 
                      they can use their bonus action to return to normal..
-       - Sirens Call: Whenever they make a Charisma (Performance) check to sing, they are considered proficient in the Performance skill and add double their proficiency bonus to the check, instead of their normal proficiency 
-                      bonus. In addition, they know the friends cantrip. They can cast the charm person spell once and need to finish a long rest before they can cast it again. They can also cast the suggestion spell once 
-                      and need to finish a long rest before they can cast it again. Charisma is their spellcasting ability for these spells. 
-       - Charm Resistant: Has advantage against being charmed       
-    
-   - - Bard Abilities:
-       - Bard Spellcasting: Spell DC15 
-          - Cantrip: Vicious Mockery, Dancing Lights, Minor Illusion
-          - 1st Level: Disguise Self, Faerie Fire, Hideous Laughter, Sleep 
-          - 2nd Level: Enthrall, Suggestion, Heat Metal
-          - 3rd Level: Nondetection, Major Image, Dispel Magic         
-       - Bardic Inspiration: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
-                             10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
-       - Jack of All Trades: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
-       - Song of Rest: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
-       - Font of Inspiration: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
-       - Countercharm: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against 
-                       being Frightened or Charmed
-       - Expertise: gets double proficiency bonus in Persuasion and Deception                
- 
-   - - College of Heartbreakers Abilities:
-       - Promise of Sweet Nothings: Once per short rest, after speaking to a humanoid for 1 minute, the target must make a Wisdom saving throw of DC15 or be charmed for 1 hour. On a successful save there is no hint that 
-                                    they have attempted to charm them
-       - Heartbreak: As a bonus action they can spend a Bardic Inspiration Point to end a charm or enchantment effect the are concentrating on to do 1d8+10 Psychic damage. They gain HP equal to the damage done 
-       - Seductive Glance: As a bonus action, 1 humanoid with 60 feet gets disadvantage on attack rolls against them and saving throws againts enchamntment spells they cast       
+        Sirens Call: Whenever they make a Charisma (Performance) check to sing, they are considered proficient in the Performance skill and add double their proficiency bonus to the check, instead of their normal proficiency 
+                     bonus. In addition, they know the friends cantrip. They can cast the charm person spell once and need to finish a long rest before they can cast it again. They can also cast the suggestion spell once
+                     and need to finish a long rest before they can cast it again. Charisma is their spellcasting ability for these spells.
+        Charm Resistant: Has advantage against being charmed
+      Bard Abilities:
+      - Bard Spellcasting:
+        - Description: Spell DC15 
+          Cantrip: Vicious Mockery, Dancing Lights, Minor Illusion
+          1st Level: Disguise Self, Faerie Fire, Hideous Laughter, Sleep 
+          2nd Level: Enthrall, Suggestion, Heat Metal
+          3rd Level: Nondetection, Major Image, Dispel Magic
+        Bardic Inspiration: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
+                            10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
+        Jack of All Trades: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
+        Song of Rest: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
+        Font of Inspiration: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
+        Countercharm: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against 
+                      being Frightened or Charmed
+        Expertise: gets double proficiency bonus in Persuasion and Deception
+      College of Heartbreakers Abilities:
+      - Promise of Sweet Nothings: Once per short rest, after speaking to a humanoid for 1 minute, the target must make a Wisdom saving throw of DC15 or be charmed for 1 hour. On a successful save there is no hint that 
+                                   they have attempted to charm them
+        Heartbreak: As a bonus action they can spend a Bardic Inspiration Point to end a charm or enchantment effect the are concentrating on to do 1d8+10 Psychic damage. They gain HP equal to the damage done 
+        Seductive Glance: As a bonus action, 1 humanoid with 60 feet gets disadvantage on attack rolls against them and saving throws againts enchamntment spells they cast
 
     special-abilities:
     - Proficiencies: Persuasion, Deception, Performance, Insight, Intimidation, Perception    
-    
+
     attacks: |
       2 Attacks with their Call or their Claws
     combat-tactics: |
       She will rarely fight. She will use her call to charm her opponents. If that doesn't work, she will try to escape
     special-equipment:
           N/A
-                                                                   
+
   profile:
 
     #
@@ -521,7 +519,7 @@ npc:
       entertainment on the ships, they will also occasionally function as a companion for the ships captain if the mood takes them. If they need to, they can transform and escape from a situation underwater. They're main goal 
       is their own continued survival as well as mating and perpetuating it's species
 
-      
+
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -533,32 +531,3 @@ npc:
     personality: |
       Tall, lithe, beautiful and androgynous, with gills on their neck and slight fins protruding up the backs of their arms. Mid-length back hair and slightly blue-tinged skin. They are smooth and flirtatious, passionate and 
       brutal
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
