--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -369,7 +369,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  Come my dearies, Feast!, Join our family, the Master will love you!, Burnnnn!!!
+    expressions:  
+    - "Come my dearies, Feast!"
+    - "Join our family, the Master will love you!"
+    - "Burnnnn!!!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -468,7 +471,6 @@ npc:
             eTwinned Spell: When you Cast a Spell that Targets only one creature and doesn’t have a range of self, you can spend a number of sorcery points equal to the spell’s level to target a second creature in range with the 
                             same spell (1 sorcery point if the spell is a cantrip)
           Sorcerous Restoration: you regain 4 expended sorcery points whenever you finish a Short Rest
-    
         Shadow Magic Abilities: 
         - Eyes of the Dark: you have darkvision with a range of 120 feet. When you reach 3rd level in this class, you learn the Darkness spell, which doesn't count against your number of sorcerer spells known. In addition, you 
                             can cast it by spending 2 sorcery points or by expending a spell slot. If you cast it with sorcery points, you can see through the darkness created by the spell.
@@ -477,12 +479,11 @@ npc:
           Hound of Ill Omen:
           - Description: 
             - you gain the ability to call forth a howling creature of darkness to harass your foes. As a bonus action, you can spend 3 sorcery points to summon a hound of ill omen to target one creature you can see within 120 feet of you. The hound uses the dire wolf’s statistics, with the following changes
-            Description Sub:
-            - The hound is size Medium, not Large, and it counts as a monstrosity, not a beast.
-              It appears with a number of temporary hit points equal to half your sorcerer level.
-              It can move through other creatures and objects as if they were difficult terrain. The hound takes 5 force damage if it ends its turn inside an object.
-              At the start of its turn, the hound automatically knows its target’s location. If the target was hidden, it is no longer hidden from the hound.
             Additional Information:
+            - The hound is size Medium, not Large, and it counts as a monstrosity, not a beast.
+            - It appears with a number of temporary hit points equal to half your sorcerer level.
+            - It can move through other creatures and objects as if they were difficult terrain. The hound takes 5 force damage if it ends its turn inside an object.
+            - At the start of its turn, the hound automatically knows its target’s location. If the target was hidden, it is no longer hidden from the hound.
             - The hound appears in an unoccupied space of your choice within 30 feet of the target. Roll initiative for the hound. On its turn, it can move only toward its target by the most direct route, and it 
               can use its action only to attack its target. The hound can make opportunity attacks, but only against its target. Additionally, while the hound is within 5 feet of the target, the target has 
               disadvantage on saving throws against any spell you cast. The hound disappears if it is reduced to 0 hit points, if its target is reduced to 0 hit points, or after 5 minutes.
